--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "sequelize": "^6.31.1",
+    "sharp": "^0.32.1",
     "sqlite3": "^5.1.6"
   }
 }
