--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.6.5",
     "sequelize": "^6.31.1",
     "sharp": "^0.32.1",
     "sqlite3": "^5.1.6"
