Updated Docker configuration for phpMyAdmin image and added Node.js container

--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,8 @@ SERVER_PORT = 3008
 CLIENT_URL = '*'
 
 # CONFIG DATABASE
-DB_HOST = ''
-DB_PORT = 3306
-DB_NAME = ''
-DB_USER = ''
-DB_PASS = ''
-
-# CONFIG DATABASE MYSQL
-MYSQL_ROOT_PASSWORD=
-MYSQL_DATABASE=
+DB_HOST=localhost
+DB_PORT=3306
+DB_NAME=my_database
+DB_USER=my_username
+DB_PASSWORD=my_password
