--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "preinstall": "npm install -g nodemon && npm install -g ts-node",
     "dev": "nodemon src/server.ts",
     "build": "tsc"
   },
@@ -23,6 +24,7 @@
     "mysql2": "^3.6.5",
     "sequelize": "^6.31.1",
     "sharp": "^0.32.1",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "nodemon": "^2.0.22"
   }
 }
