--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,8 @@ services:
     depends_on:
       - mysql
     restart: always
+    ports:
+      - "3008:3008"
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules/
