--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,56 +1,87 @@
+version: '3'
 services:
-  mysql:
-    image: mysql:latest
-    restart: always
-    env_file:
-      - .env
-    environment:
-      MYSQL_ROOT_PASSWORD: $DB_PASSWORD
-      MYSQL_DATABASE: $DB_NAME
-    volumes:
-      - db_data:/var/lib/mysql
-    networks:
-      - mysql-phpmyadmin
-      - mysql
+#  mysql:
+#    image: mysql:latest
+#    restart: always
+#    env_file:
+#      - .env
+#    environment:
+#      MYSQL_ROOT_PASSWORD: $DB_PASSWORD
+#      MYSQL_DATABASE: $DB_NAME
+#    volumes:
+#      - db_data:/var/lib/mysql
+#    networks:
+#      - backend
 
-  phpmyadmin:
-    platform: linux/x86_64
-    depends_on:
-      - mysql
-    image: phpmyadmin/phpmyadmin:latest
-    container_name: phpmyadmin
-    restart: always
-    ports:
-      - "8080:80"
-    env_file:
-      - .env
-    environment:
-      PMA_HOST: mysql
-      MYSQL_ROOT_PASSWORD: $DB_PASSWORD
-    networks:
-      - mysql-phpmyadmin
+#  phpmyadmin:
+#    platform: linux/x86_64
+#    depends_on:
+#      - mysql
+#    image: phpmyadmin/phpmyadmin:latest
+#    container_name: phpmyadmin
+#    restart: always
+#    ports:
+#      - "8080:80"
+#    env_file:
+#      - .env
+#    environment:
+#      PMA_HOST: mysql
+#      MYSQL_ROOT_PASSWORD: $DB_PASSWORD
+#    networks:
+#      - backend
 
   nodejs:
     image: node:latest
     container_name: nodejs
     build: .
-    depends_on:
-      - mysql
+#    depends_on:
+#      - mysql
     restart: always
-    ports:
-      - "3008:3008"
+    environment:
+      - PORT=4000
+#    ports:
+#      - "3008:3008"
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules/
-    working_dir: /usr/src/app
-    networks:
-      - mysql
+#    networks:
+#      - backend
 
-networks:
-  mysql-phpmyadmin:
-    driver: bridge
-  mysql:
-    driver: bridge
+  express_admin:
+    image: node:latest
+    container_name: express_admin
+    build: .
+#    depends_on:
+#      - mysql
+    restart: always
+    environment:
+      - ROUTER_ADMIN=ROUTER_ADMIN
+      - PORT=4000
+#    ports:
+#      - "3009:3009"
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules/
+#    networks:
+#      - backend
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx_server
+    depends_on:
+      - nodejs
+      - express_admin
+    ports:
+      - "4000:4000"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./html:/usr/share/nginx/html
+#    networks:
+#      - backend
+
+#networks:
+#  backend:
+#    driver: bridge
 
 volumes:
   db_data:
