--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "preinstall": "npm install -g nodemon && npm install -g ts-node",
     "dev": "nodemon -L src/server.ts",
+    "start": "ts-node src/server.ts",
     "build": "tsc"
   },
   "author": "Lhony",
