--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,46 @@
 version: '3'
 services:
-#  mysql:
-#    image: mysql:latest
-#    restart: always
-#    env_file:
-#      - .env
-#    environment:
-#      MYSQL_ROOT_PASSWORD: $DB_PASSWORD
-#      MYSQL_DATABASE: $DB_NAME
-#    volumes:
-#      - db_data:/var/lib/mysql
+  mysql:
+    image: mysql:latest
+    restart: always
+    env_file:
+      - .env
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: $DB_PASSWORD
+      MYSQL_DATABASE: $DB_NAME
+    volumes:
+      - db_data:/var/lib/mysql
 #    networks:
 #      - backend
 
-#  phpmyadmin:
-#    platform: linux/x86_64
-#    depends_on:
-#      - mysql
-#    image: phpmyadmin/phpmyadmin:latest
-#    container_name: phpmyadmin
-#    restart: always
-#    ports:
-#      - "8080:80"
-#    env_file:
-#      - .env
-#    environment:
-#      PMA_HOST: mysql
-#      MYSQL_ROOT_PASSWORD: $DB_PASSWORD
+  phpmyadmin:
+    platform: linux/x86_64
+    depends_on:
+      - mysql
+    image: phpmyadmin/phpmyadmin:latest
+    container_name: phpmyadmin
+    restart: always
+    ports:
+      - "8080:80"
+    env_file:
+      - .env
+    environment:
+      PMA_HOST: mysql
+      MYSQL_ROOT_PASSWORD: $DB_PASSWORD
 #    networks:
 #      - backend
 
-  nodejs:
+  express_client:
     image: node:latest
-    container_name: nodejs
+    container_name: express_client
     build: .
 #    depends_on:
 #      - mysql
     restart: always
     environment:
       - PORT=4000
-#    ports:
-#      - "3008:3008"
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules/
@@ -57,8 +57,6 @@ services:
     environment:
       - ROUTER_ADMIN=ROUTER_ADMIN
       - PORT=4000
-#    ports:
-#      - "3009:3009"
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules/
@@ -69,7 +67,7 @@ services:
     image: nginx:latest
     container_name: nginx_server
     depends_on:
-      - nodejs
+      - express_client
       - express_admin
     ports:
       - "4000:4000"
