--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@sequelize/mysql": "^7.0.0-alpha.41",
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.6.5",
+    "mysql2": "^3.10.0",
+    "nodemon": "^2.0.22",
     "sequelize": "^6.31.1",
     "sharp": "^0.32.1",
-    "sqlite3": "^5.1.6",
-    "nodemon": "^2.0.22"
+    "sqlite3": "^5.1.6"
   }
 }
